Use stack for storing previous moves in Mission